--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
 
-  <body class="min-h-screen bg-gray-100 text-gray-900">
+  <body class="min-h-screen bg-gray-100 text-gray-900 overflow-auto">
     <!-- Mobile Header -->
     <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
       <div class="flex items-center space-x-2">
@@ -20,22 +20,20 @@
       </div>
     </header>
 
-    <!-- Main Layout -->
-    <div class="flex min-h-screen relative">
+    <!-- Layout -->
+    <div class="flex min-h-screen">
       <!-- Sidebar placeholder -->
-      <div id="sidebar-container" class="hidden md:block w-72"></div>
+      <div id="sidebar-container" class="w-72 hidden md:block"></div>
 
-      <!-- Mobile backdrop -->
-      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
+      <!-- Backdrop -->
+      <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-50 z-30 hidden md:hidden"></div>
 
-      <!-- Main Content -->
+      <!-- Main content -->
       <main class="flex-1 overflow-y-auto p-4 md:p-8">
         <div class="max-w-3xl mx-auto">
           <h2 class="text-2xl font-semibold mb-4 text-blue-700">Welcome to your Admin Dashboard</h2>
           <div class="bg-white p-6 rounded-2xl shadow">
-            <p>
-              Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.
-            </p>
+            <p>Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.</p>
           </div>
         </div>
       </main>
