--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -20,15 +20,15 @@
       </div>
     </header>
 
-    <!-- Layout -->
+    <!-- Main Layout -->
     <div class="flex min-h-screen">
-      <!-- Sidebar placeholder -->
-      <div id="sidebar-container" class="w-72 hidden md:block"></div>
+      <!-- Sidebar (loaded dynamically) -->
+      <div id="sidebar-container"></div>
 
-      <!-- Backdrop -->
-      <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-50 z-30 hidden md:hidden"></div>
+      <!-- Mobile Backdrop -->
+      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-      <!-- Main content -->
+      <!-- Main Content -->
       <main class="flex-1 overflow-y-auto p-4 md:p-8">
         <div class="max-w-3xl mx-auto">
           <h2 class="text-2xl font-semibold mb-4 text-blue-700">Welcome to your Admin Dashboard</h2>
@@ -39,7 +39,7 @@
       </main>
     </div>
 
-    <!-- Sidebar Loader -->
+    <!-- Load Sidebar HTML and JS -->
     <script src="/admin/js/load-sidebar.js" defer></script>
   </body>
 </html>
