--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,14 +1,14 @@
 <aside
   id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 md:block transition-transform duration-300 ease-in-out flex flex-col"
+  class="w-72 md:block fixed md:relative inset-y-0 left-0 z-40 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
 >
-  <!-- Logo/Header -->
+  <!-- Logo -->
   <div class="p-4 flex items-center gap-3 sticky top-0 bg-white border-b shadow z-10">
     <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full object-cover" />
     <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
   </div>
 
-  <!-- Navigation -->
+  <!-- Navigation Links -->
   <nav class="flex-1 overflow-y-auto p-4 space-y-1 text-gray-700 font-medium">
     <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
@@ -31,7 +31,7 @@
     <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
   </nav>
 
-  <!-- Logout -->
+  <!-- Logout Button -->
   <div class="p-4 border-t sticky bottom-0 bg-white z-10 shadow-inner">
     <button onclick="logout()" class="w-full px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">
       🚪 Logout
