--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -29,16 +29,21 @@
       <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
       <!-- Main Content -->
-<main class="flex-1 overflow-y-auto px-4 py-6 md:px-8">
-  <div class="max-w-3xl mx-auto w-full">
-    <h2 class="text-2xl font-semibold mb-4 text-blue-700">Welcome to your Admin Dashboard</h2>
-    <div class="bg-white p-6 rounded-2xl shadow">
-      <p>Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.</p>
-    </div>
+      <main class="flex-1 overflow-y-auto p-4 md:p-8">
+        <div class="max-w-3xl mx-auto w-full px-4 md:px-0">
+  <h2 class="text-2xl font-semibold mb-4 text-blue-700 text-center md:text-center">
+    Welcome to your Admin Dashboard
+  </h2>
+  <div class="bg-white p-6 rounded-2xl shadow">
+    <p class="text-center md:text-center">
+      Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.
+    </p>
   </div>
-</main>
-
 </div>
+
+      </main>
+    </div>
+
     <!-- Load Sidebar HTML and JS -->
     <script src="/admin/js/load-sidebar.js" defer></script>
   </body>
