--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -30,12 +30,15 @@
 
       <!-- Main Content -->
       <main class="flex-1 overflow-y-auto p-4 md:p-8">
-        <div class="max-w-3xl mx-auto w-full px-4 md:px-0">
-  <h2 class="text-2xl font-semibold mb-4 text-blue-700 text-center md:text-center">
+        <div
+  class="max-w-3xl w-full px-4 md:px-0"
+  style="margin-left: 0; margin-right: auto; @media (min-width: 768px) { margin-left: calc((100vw - 18rem - 768px) / 2); }"
+>
+  <h2 class="text-2xl font-semibold mb-4 text-blue-700 text-center md:text-left">
     Welcome to your Admin Dashboard
   </h2>
   <div class="bg-white p-6 rounded-2xl shadow">
-    <p class="text-center md:text-center">
+    <p class="text-center md:text-left">
       Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.
     </p>
   </div>
