--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -9,7 +9,7 @@
 
   <body class="min-h-screen bg-gray-100 text-gray-900 overflow-auto">
     <!-- Mobile Header -->
-    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
+    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow z-50 sticky top-0">
       <div class="flex items-center space-x-2">
         <button id="menuToggle" class="text-gray-700 focus:outline-none">
           <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -22,29 +22,38 @@
 
     <!-- Main Layout -->
     <div class="flex min-h-screen">
-      <!-- Sidebar (loaded dynamically) -->
-      <div id="sidebar-container"></div>
+      <!-- Sidebar (injected dynamically) -->
+      <div id="sidebar-container" class="md:block w-72"></div>
 
       <!-- Mobile Backdrop -->
       <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
       <!-- Main Content -->
       <main class="flex-1 overflow-y-auto p-4 md:p-8">
-        <div class="max-w-3xl w-full px-4 md:ml-[calc((100vw-288px-768px)/2)]">
-  <h2 class="text-2xl font-semibold mb-4 text-blue-700 text-center md:text-left">
-    Welcome to your Admin Dashboard
-  </h2>
-  <div class="bg-white p-6 rounded-2xl shadow">
-    <p class="text-center md:text-left">
-      Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.
-    </p>
-  </div>
-</div>
-
+        <div class="max-w-4xl mx-auto">
+          <h2 class="text-2xl font-semibold mb-4 text-blue-700">Welcome to your Admin Dashboard</h2>
+          <div class="bg-white p-6 rounded-2xl shadow">
+            <p>
+              Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.
+            </p>
+          </div>
+        </div>
       </main>
     </div>
 
-    <!-- Load Sidebar HTML and JS -->
-    <script src="/admin/js/load-sidebar.js" defer></script>
+    <!-- Load Sidebar & Behavior -->
+    <script>
+      // Dynamically load the sidebar HTML and script
+      fetch('/admin/sidebar.html')
+        .then((res) => res.text())
+        .then((html) => {
+          document.getElementById('sidebar-container').innerHTML = html;
+          const script = document.createElement('script');
+          script.src = '/admin/js/sidebar.js';
+          script.defer = true;
+          document.body.appendChild(script);
+        })
+        .catch((err) => console.error('❌ Sidebar failed to load:', err));
+    </script>
   </body>
 </html>
