--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -20,7 +20,6 @@
       </div>
     </header>
 
-    <!-- Layout -->
     <div class="flex min-h-screen">
       <!-- Sidebar -->
       <div id="sidebar-container" class="w-72 hidden md:block"></div>
@@ -32,45 +31,15 @@
       <main class="flex-1 overflow-y-auto p-4 md:p-8">
         <div class="max-w-3xl mx-auto w-full px-4 md:px-0">
           <h2 class="text-2xl font-semibold mb-4 text-blue-700 text-center">Support Center</h2>
-
           <div id="supportTickets" class="space-y-4">
-            <!-- Fetched support tickets will be injected here -->
+            <!-- Support tickets will be injected here -->
           </div>
         </div>
       </main>
     </div>
 
-    <!-- Scripts -->
+    <!-- External Scripts -->
     <script src="/admin/js/load-sidebar.js" defer></script>
-    <script>
-      document.addEventListener('DOMContentLoaded', async () => {
-        const container = document.getElementById('supportTickets');
-        try {
-          const res = await fetch('/api/support', { credentials: 'include' });
-          const tickets = await res.json();
-
-          if (!Array.isArray(tickets)) {
-            container.innerHTML = '<p class="text-red-600">Failed to load support tickets.</p>';
-            return;
-          }
-
-          if (tickets.length === 0) {
-            container.innerHTML = '<p>No support tickets yet.</p>';
-            return;
-          }
-
-          container.innerHTML = tickets.map(ticket => `
-            <div class="bg-white p-4 rounded-xl shadow border">
-              <h3 class="font-semibold text-blue-700">${ticket.subject}</h3>
-              <p class="text-sm text-gray-500">${new Date(ticket.created_at).toLocaleString()}</p>
-              <p class="mt-2 text-gray-800">${ticket.message}</p>
-            </div>
-          `).join('');
-        } catch (error) {
-          console.error('❌ Failed to fetch tickets:', error);
-          container.innerHTML = '<p class="text-red-600">Error fetching support data.</p>';
-        }
-      });
-    </script>
+    <script src="/admin/js/support-page.js" defer></script>
   </body>
 </html>
