--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -1,48 +1,125 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Support – Tidyzenic</title>
-    <link rel="stylesheet" href="/styles.css" />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Support – Tidyzenic</title>
+  <link rel="stylesheet" href="/styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+</head>
+<body class="bg-gray-100 text-gray-800">
+  <!-- Sidebar will be injected here -->
+  <div id="sidebar-container"></div>
 
-  <body class="min-h-screen bg-gray-100 text-gray-900 overflow-auto">
-    <!-- Mobile Header -->
-    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow z-50 sticky top-0">
-      <div class="flex items-center space-x-2">
-        <button id="menuToggle" class="text-gray-700 focus:outline-none">
-          <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-        </button>
-        <span class="font-bold text-lg text-blue-600">Support</span>
-      </div>
-    </header>
+  <main class="ml-0 md:ml-64 transition-all duration-300 px-4 py-10 min-h-screen">
+    <div class="max-w-4xl mx-auto bg-white p-8 shadow-xl rounded-2xl">
+      <h1 class="text-3xl font-bold text-blue-700 text-center mb-4">Need Help?</h1>
+      <p class="text-center text-gray-500 mb-8">Submit a ticket and our support team will respond shortly.</p>
 
-    <!-- Layout -->
-    <div class="flex min-h-screen">
-      <!-- Sidebar -->
-      <div id="sidebar-container" class="w-72 hidden md:block"></div>
-
-      <!-- Mobile Backdrop -->
-      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
-
-      <!-- Main Content -->
-      <main class="flex-1 overflow-y-auto p-4 md:p-8">
-        <div class="max-w-3xl mx-auto w-full px-4 md:px-0">
-          <h2 class="text-2xl font-semibold mb-4 text-blue-700 text-center">Support Center</h2>
-
-          <div id="supportTickets" class="space-y-4">
-            <!-- Support tickets will be rendered here -->
-          </div>
+      <form id="supportForm" class="space-y-6">
+        <div>
+          <label class="block text-sm font-medium mb-1">Subject <span class="text-red-600">*</span></label>
+          <input type="text" id="subject" name="subject" required class="w-full rounded-lg border px-4 py-3" />
         </div>
-      </main>
+
+        <div>
+          <label class="block text-sm font-medium mb-1">Message <span class="text-red-600">*</span></label>
+          <textarea id="message" name="message" rows="6" required class="w-full rounded-lg border px-4 py-3"></textarea>
+        </div>
+
+        <div class="pt-2 text-center">
+          <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg">
+            Submit Ticket
+          </button>
+          <p id="statusMsg" class="text-sm mt-4"></p>
+        </div>
+      </form>
+
+      <div class="mt-10 border-t pt-6 text-sm text-center text-gray-500">
+        Or email us directly at <a href="mailto:support@tidyzenic.com" class="text-blue-600 hover:underline">support@tidyzenic.com</a>
+      </div>
     </div>
 
-    <!-- Scripts -->
-    <script src="/admin/js/load-sidebar.js" defer></script>
-    <script src="/admin/js/sidebar.js" defer></script>
-    <script src="/admin/js/support-page.js" defer></script>
-  </body>
+    <section class="mt-10 max-w-4xl mx-auto">
+      <h2 class="text-xl font-semibold mb-4">Your Previous Tickets</h2>
+      <div id="supportTickets" class="space-y-4"></div>
+    </section>
+  </main>
+
+  <!-- Scripts -->
+  <script src="/admin/js/auth-check.js"></script>
+  <script src="/admin/js/load-sidebar.js"></script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', async () => {
+      const status = document.getElementById('statusMsg');
+      const form = document.getElementById('supportForm');
+      const container = document.getElementById('supportTickets');
+
+      // Submit support ticket
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        status.textContent = 'Sending...';
+
+        const payload = {
+          subject: form.subject.value,
+          message: form.message.value,
+        };
+
+        try {
+          const res = await fetch('/api/support', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            credentials: 'include',
+            body: JSON.stringify(payload),
+          });
+
+          const data = await res.json();
+          if (res.ok) {
+            status.textContent = '✅ Ticket submitted successfully!';
+            form.reset();
+            loadTickets(); // Refresh tickets after submit
+          } else {
+            status.textContent = data.error || '❌ Something went wrong.';
+          }
+        } catch (err) {
+          console.error('❌ Support submit error:', err);
+          status.textContent = '❌ Server error. Please try again later.';
+        }
+      });
+
+      // Load user tickets
+      async function loadTickets() {
+        try {
+          const res = await fetch('/api/support', { credentials: 'include' });
+          if (!res.ok) throw new Error('Failed to fetch tickets');
+          const tickets = await res.json();
+
+          if (!Array.isArray(tickets)) {
+            container.innerHTML = '<p class="text-red-600">Invalid response format.</p>';
+            return;
+          }
+
+          if (tickets.length === 0) {
+            container.innerHTML = '<p class="text-center text-gray-500">No support tickets yet.</p>';
+            return;
+          }
+
+          container.innerHTML = tickets.map(ticket => `
+            <div class="bg-white p-4 rounded-xl shadow border">
+              <h3 class="font-semibold text-blue-700">${ticket.subject}</h3>
+              <p class="text-sm text-gray-500">${new Date(ticket.created_at).toLocaleString()}</p>
+              <p class="mt-2 text-gray-800">${ticket.message}</p>
+            </div>
+          `).join('');
+        } catch (err) {
+          console.error('❌ Support fetch error:', err);
+          container.innerHTML = '<p class="text-red-600">Could not load support tickets.</p>';
+        }
+      }
+
+      loadTickets();
+    });
+  </script>
+</body>
 </html>
