--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -3,120 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Support – Tidyzenic</title>
+  <title>Support Tickets – Admin Panel</title>
   <link rel="stylesheet" href="/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body class="bg-gray-100 text-gray-800">
-  <!-- Sidebar will be injected here -->
+
+  <!-- Sidebar Container -->
   <div id="sidebar-container"></div>
 
-  <main class="ml-0 md:ml-64 transition-all duration-300 px-4 py-10 min-h-screen">
-    <div class="max-w-4xl mx-auto bg-white p-8 shadow-xl rounded-2xl">
-      <h1 class="text-3xl font-bold text-blue-700 text-center mb-4">Need Help?</h1>
-      <p class="text-center text-gray-500 mb-8">Submit a ticket and our support team will respond shortly.</p>
+  <main class="ml-0 md:ml-64 px-4 py-8 transition-all">
+    <div class="max-w-6xl mx-auto">
+      <h1 class="text-3xl font-bold text-blue-700 mb-2">📨 Support Tickets</h1>
 
-      <form id="supportForm" class="space-y-6">
-        <div>
-          <label class="block text-sm font-medium mb-1">Subject <span class="text-red-600">*</span></label>
-          <input type="text" id="subject" name="subject" required class="w-full rounded-lg border px-4 py-3" />
+      <!-- Admin Badge -->
+      <div class="bg-white border rounded-xl shadow p-4 mb-6 flex items-center space-x-4">
+        <div class="bg-blue-100 text-blue-700 px-3 py-1 rounded-full text-sm font-medium">
+          <span id="badgeName">Loading...</span>
         </div>
-
-        <div>
-          <label class="block text-sm font-medium mb-1">Message <span class="text-red-600">*</span></label>
-          <textarea id="message" name="message" rows="6" required class="w-full rounded-lg border px-4 py-3"></textarea>
+        <div class="text-sm text-gray-600">
+          <div><span id="badgeEmail">...</span></div>
+          <div><span id="badgeRole">...</span> at Tidyzenic</div>
         </div>
+      </div>
 
-        <div class="pt-2 text-center">
-          <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg">
-            Submit Ticket
-          </button>
-          <p id="statusMsg" class="text-sm mt-4"></p>
-        </div>
-      </form>
-
-      <div class="mt-10 border-t pt-6 text-sm text-center text-gray-500">
-        Or email us directly at <a href="mailto:support@tidyzenic.com" class="text-blue-600 hover:underline">support@tidyzenic.com</a>
+      <!-- Support Ticket List -->
+      <div id="supportTickets" class="space-y-6">
+        <p class="text-gray-500">Loading tickets...</p>
       </div>
     </div>
-
-    <section class="mt-10 max-w-4xl mx-auto">
-      <h2 class="text-xl font-semibold mb-4">Your Previous Tickets</h2>
-      <div id="supportTickets" class="space-y-4"></div>
-    </section>
   </main>
 
-  <!-- Scripts -->
-  <script src="/admin/js/auth-check.js"></script>
+  <script src="/js/auth-check.js"></script>
   <script src="/admin/js/load-sidebar.js"></script>
 
   <script>
-    document.addEventListener('DOMContentLoaded', async () => {
-      const status = document.getElementById('statusMsg');
-      const form = document.getElementById('supportForm');
+    async function loadTickets() {
       const container = document.getElementById('supportTickets');
+      try {
+        const res = await fetch('/api/support', { credentials: 'include' });
+        if (!res.ok) throw new Error('Failed to fetch tickets');
+        const tickets = await res.json();
 
-      // Submit support ticket
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        status.textContent = 'Sending...';
-
-        const payload = {
-          subject: form.subject.value,
-          message: form.message.value,
-        };
-
-        try {
-          const res = await fetch('/api/support', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            credentials: 'include',
-            body: JSON.stringify(payload),
-          });
-
-          const data = await res.json();
-          if (res.ok) {
-            status.textContent = '✅ Ticket submitted successfully!';
-            form.reset();
-            loadTickets(); // Refresh tickets after submit
-          } else {
-            status.textContent = data.error || '❌ Something went wrong.';
-          }
-        } catch (err) {
-          console.error('❌ Support submit error:', err);
-          status.textContent = '❌ Server error. Please try again later.';
+        if (!Array.isArray(tickets) || tickets.length === 0) {
+          container.innerHTML = '<p class="text-center text-gray-500">No support tickets found.</p>';
+          return;
         }
-      });
 
-      // Load user tickets
-      async function loadTickets() {
-        try {
-          const res = await fetch('/api/support', { credentials: 'include' });
-          if (!res.ok) throw new Error('Failed to fetch tickets');
-          const tickets = await res.json();
-
-          if (!Array.isArray(tickets)) {
-            container.innerHTML = '<p class="text-red-600">Invalid response format.</p>';
-            return;
-          }
-
-          if (tickets.length === 0) {
-            container.innerHTML = '<p class="text-center text-gray-500">No support tickets yet.</p>';
-            return;
-          }
-
-          container.innerHTML = tickets.map(ticket => `
-            <div class="bg-white p-4 rounded-xl shadow border">
-              <h3 class="font-semibold text-blue-700">${ticket.subject}</h3>
+        container.innerHTML = tickets.map(ticket => `
+          <div class="bg-white p-5 rounded-xl shadow border border-gray-200">
+            <div class="flex justify-between items-center mb-2">
+              <h3 class="font-semibold text-lg text-blue-700">${ticket.subject}</h3>
               <p class="text-sm text-gray-500">${new Date(ticket.created_at).toLocaleString()}</p>
-              <p class="mt-2 text-gray-800">${ticket.message}</p>
             </div>
-          `).join('');
-        } catch (err) {
-          console.error('❌ Support fetch error:', err);
-          container.innerHTML = '<p class="text-red-600">Could not load support tickets.</p>';
-        }
+            <p class="text-sm text-gray-700 mb-2">${ticket.message}</p>
+            <div class="text-xs text-gray-500">
+              From: <strong>${ticket.user_name || 'Unknown'}</strong> (${ticket.user_email || 'No email'})
+            </div>
+          </div>
+        `).join('');
+      } catch (err) {
+        console.error('❌ Support fetch error:', err);
+        container.innerHTML = '<p class="text-red-600">Could not load support tickets.</p>';
       }
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      // Fill admin badge
+      const u = window.currentUser || {};
+      document.getElementById('badgeName').textContent = u.name || 'Admin';
+      document.getElementById('badgeEmail').textContent = u.email || '';
+      document.getElementById('badgeRole').textContent = u.role?.toUpperCase() || '';
 
       loadTickets();
     });
